Add unit tests for I/O package and Simulation files